# todo-api

./: Cargo.toml  migration
migrations/: 1681561187_create_todo_table.sql
src/: main.rs
src/application/: dto.rs  handler.rs  mod.rs  request.rs  response.rs
src/client/: database.rs
src/domain/todo/: entity.rs  service.rs
src/infrastructure/todo/: repository.rs
src/server/: config.rs  mod.rs  route.rs  server.rs
