[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = { version = "0.16.0" }
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.24", features = ["serde"] }
sqlx = { version = "0.6.3", features = [ "runtime-async-std-rustls", "macros", "postgres", "chrono" ] }
anyhow = { version = "1.0.70" }